Feat: finished solver and early GUI